v2/security/authorization.mdx
---
title: Authorization
---

import V2UpgradeWarning from "/snippets/v2-upgrade-warning.mdx";

<V2UpgradeWarning />

When using Inertia, authorization is best handled server-side in your application's authorization policies. However, you may be wondering how to perform checks against your authorization policies from within your Inertia page components since you won't have access to your framework's server-side helpers.

The simplest approach to solving this problem is to pass the results of your authorization checks as props to your page components.

<CodeGroup>

```php Laravel icon="laravel"
class UsersController extends Controller
{
    public function index()
    {
        return Inertia::render('Users/Index', [
            'can' => [
                'create_user' => Auth::user()->can('create', User::class),
            ],
            'users' => User::all()->map(function ($user) {
                return [
                    'first_name' => $user->first_name,
                    'last_name' => $user->last_name,
                    'email' => $user->email,
                    'can' => [
                        'edit_user' => Auth::user()->can('edit', $user),
                    ]
                ];
            }),
        ]);
    }
}
```

```csharp .NET icon="dotnet"
using InertiaCore;
using Microsoft.AspNetCore.Identity;

public class UsersController : Controller
{
    private readonly UserManager<User> _userManager;
    private readonly IAuthorizationService _authorizationService;

    public UsersController(
        UserManager<User> userManager,
        IAuthorizationService authorizationService)
    {
        _userManager = userManager;
        _authorizationService = authorizationService;
    }

    public async Task<IActionResult> Index()
    {
        var currentUser = await _userManager.GetUserAsync(User);
        var users = _context.Users.ToList();

        return Inertia.Render("Users/Index", new
        {
            Can = new
            {
                CreateUser = (await _authorizationService
                    .AuthorizeAsync(User, "CreateUser")).Succeeded
            },
            Users = users.Select(user => new
            {
                user.FirstName,
                user.LastName,
                user.Email,
                Can = new
                {
                    EditUser = (_authorizationService
                        .AuthorizeAsync(User, user, "EditUser")).Result.Succeeded
                }
            })
        });
    }
}
```

</CodeGroup>